--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,12 +1,29 @@
-body {
-    margin-left: 150px;
-    margin-right: 150px;
-    font-size: 18px;
+* {
+    font-family: Helvetica;
 }
 
-nav {
-    display: flex;
-    justify-content: right;
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar li {
+    float: left;
+}
+
+.navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
 }
 
 .about-me {
@@ -19,11 +36,26 @@ nav {
 }
 
 .self {
-    height: 250px;
-    width: 300px;
+    height: 180px;
+    width: 180px;
     float: right;
     margin-right: 50px;
     margin-top: auto;
+}
+
+.certificates li::marker {
+    content: "";
+}
+
+.skills-icons img {
+    height: 50px;
+    width: 50px;
+}
+
+.contact {
+    color: white;
+    background-color: #111;
+    text-align: center;
 }
 
 .icons img {
