--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -96,8 +96,13 @@ nav li a:hover {
 
 /* Projects Section*/
 #projects {
-    height: 300px;
+    height: 500px;
     padding-top: 10px;
+}
+
+.project-pic img {
+    height: 350px;
+    width: 350px;
 }
 
 /* Conact Section */
