--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -15,6 +15,10 @@ p {
     color: #363636;
 }
 
+.white {
+    color: white;
+}
+
 h2 {
     text-align: center;
     font-size: 22px;
@@ -47,6 +51,11 @@ a {
 img {
     width: 30px;
     height: 30px;
+}
+
+.project-links img {
+    width: 300px;
+    height: 300px;
 }
 
 /* Navigation Section */
@@ -100,7 +109,6 @@ img {
 
 /*Header Image*/
 #me {
-    height: 500px;
     text-align: center;
     padding-top: 40px;
     padding-bottom: 50px;
@@ -168,22 +176,26 @@ img {
 
 /* Projects Section*/
 #projects {
-    height: 275px;
     background-color: #214072;
-    text-align: center;
     margin-left: 10%;
     margin-right: 10%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.project-links {
+.thumb {
+    text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 200px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 18px;
-    font-weight: 400;
+    align-items: center;
+}
+
+.project-links img {
+    width: 175px;
+    height: 175px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
 }
 
 /* Conact Section */
@@ -219,5 +231,10 @@ img {
     .navbar li  {
         text-align: center;
         float: none;
+    }
+
+    #me img {
+        height: 300px;
+        width: 300px;
     }
 }
