new media query sizes

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -102,11 +102,6 @@ img {
     padding: 5px;
 }
 
-.navbar a:hover {
-    border: 1px solid black;
-    padding: 5px;
-}
-
 /*Header Image*/
 #me {
     text-align: center;
@@ -191,7 +186,7 @@ img {
 }
 
 .project-links img {
-    width: 175px;
+    width: 200px;
     height: 175px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -227,7 +222,14 @@ img {
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 800px) {
+    .navbar {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (max-width: 670px) {
     .navbar li  {
         text-align: center;
         float: none;
